--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
+        "hardevine/shoppingcart": "^2.8",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0"
     },
