--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "hardevine/shoppingcart": "^2.8",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
-        "stripe/stripe-php": "^7.47"
+        "stripe/stripe-php": "^7.47",
+        "tcg/voyager": "^1.4"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
@@ -62,5 +63,11 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ]
+    },
+    "repositories": {
+        "hooks": {
+            "type": "composer",
+            "url": "https://larapack.io"
+        }
     }
 }
